feat: extraProductSection & lastSection added

--- a/index.html
+++ b/index.html
@@ -601,9 +601,181 @@
             </div>
         </section> -->
 
+        <section class="extraPercent container-fluid">
+            <div class="container">
+                <div class="row d-flex justify-content-center my-5">
+                    <h2>SAVE AN EXTRA <strong>5-10 %</strong> ON EVERY AUTOSHIP ORDER!</h2>
+                </div>
+            </div>
+        </section>
 
+        <section class="extraProductSection">
+            <div class="container">
+                <div class="row col-11 d-flex " style=" flex-wrap: wrap">
+                    <div class="product  col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-62-346x310.jpg" alt="">
+                            <a href="">All Natural Italian-Style Chicken Meatballs </a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-60-346x310.jpg" alt="">
+                            <a href="">Angie’s Boomchickapop Sweet & Salty Kettle Corn </a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-46-346x310.jpg" alt="">
+                            <a href="">Field Roast Chao Cheese Creamy Original</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/5star.JPG" style="width: 120px; height: 30px !important"
+                                    alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-57-346x310.jpg" alt="">
+                            <a href="">Fresh Organic Broccoli Crowns</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-48-346x310.jpg" alt="">
+                            <a href="">Encore Seafoods Stuffed Alaskan Salmon</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+
+                    <div class="product  col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-62-346x310.jpg" alt="">
+                            <a href="">All Natural Italian-Style Chicken Meatballs </a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-60-346x310.jpg" alt="">
+                            <a href="">Angie’s Boomchickapop Sweet & Salty Kettle Corn </a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-46-346x310.jpg" alt="">
+                            <a href="">Field Roast Chao Cheese Creamy Original</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/5star.JPG" style="width: 120px; height: 30px !important"
+                                    alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-57-346x310.jpg" alt="">
+                            <a href="">Fresh Organic Broccoli Crowns</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-48-346x310.jpg" alt="">
+                            <a href="">Encore Seafoods Stuffed Alaskan Salmon</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="lastSectionBody container-fluid">
+            <div class="container lastSection">
+                <div class="row col-11 d-flex justify-content-around">
+                    <div class="product col-4">
+                        <img src="/assets/img/bacola-banner-05.jpg" alt="">
+                        <div class="content">
+                            <h6>WEEKEND DISCOUNT 40%</h6>
+                            <h3>Natural Eggs</h3>
+                            <p>Eat one every day</p>
+                            <button class="btn btn-primary">Shop Now</button>
+                        </div>
+                    </div>
+                    <div class="product col-4">
+                        <img src="/assets/img/bacola-banner-06.jpg" alt="">
+                        <div class="content">
+                            <h6>WEEKEND DISCOUNT 40%</h6>
+                            <h3>Taste The Best</h3>
+                            <p>Shine the morning</p>
+                            <button class="btn btn-primary">Shop Now</button>
+                        </div>
+                    </div>
+                    <div class="product col-4">
+                        <img src="/assets/img/bacola-banner-10.jpg" alt="">
+                        <div class="content">
+                            <h6>WEEKEND DISCOUNT 40%</h6>
+                            <h3>Ditch the Junk</h3>
+                            <p>Breakfast made better</p>
+                            <button class="btn btn-primary">Shop Now</button>
+                        </div>
+                    </div>
+
+                    <div class="product col-4">
+                        <img src="/assets/img/blog-3-370x260.jpg" alt="">
+                        <div class="description">
+                            <span>TIPS & TRICKS</span>
+                            <h5>But I must explain to you how all this mistaken idea</h5>
+                            <span>3 May 2021 </span>
+                            <span> 3 comments</span>
+                            <span> by Bacola</span>
+                        </div>
+                    </div>
+                    <div class="product col-4">
+                        <img src="/assets/img/blog-5-370x260.jpg" alt="">
+                        <div class="description">
+                            <span>GROCERY</span>
+                            <h5>The Problem With Typefaces on the Web</h5>
+                            <span>3 May 2021 </span>
+                            <span> 3 comments</span>
+                            <span> by Bacola</span>
+                        </div>
+
+                    </div>
+                    <div class="product col-4">
+                        <img src="/assets/img/blog-1-370x260.jpg" alt="">
+                        <div class="description">
+                            <span>GROCERY</span>
+                            <h5>English Breakfast Tea With Tasty Donut Desserts</h5>
+                            <span>2 May 2021 </span>
+                            <span> 3 comments</span>
+                            <span> by Bacola</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
 
     <footer>
         <div class="container-fluid couponSection">
