feat : my-accaunt page completed

--- a/assets/html/my-accaount.html
+++ b/assets/html/my-accaount.html
@@ -177,14 +177,56 @@
         <section class="formSection">
             <div class="container-fluid">
                 <div class="container">
-                    <div class="row">
-                        <form action="">
-                            <h1></h1>
-                            <label for=""></label>
-                            <input type="text">
-                        </form>
+                    <p class=""><a href="/index.html">Home </a><span>> My Accaount</span></p>
+                    <div class=" d-flex col-11">
+                        <div class="row col-6">
+                            <form>
+                                <h5 class="py-3">LOGIN </h5>
+                                <div class="form-group">
+                                    <label class="py-2 px-1" for="exampleInputEmail1">Username or mail address *</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+
+                                </div>
+                                <div class="form-group">
+                                    <label class="py-2 px-1" for="exampleInputPassword1">Password *</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input my-3" id="exampleCheck1">
+                                    <label class="form-check-label my-3" for="exampleCheck1">Remember me</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Log in</button>
+                                <p class="my-3"> <a href="">Lost your password?</a> </p>
+                            </form>
+                        </div>
+                        <div class="row mx-5 col-6">
+                            <form>
+                                <h5 class="py-3">REGISTER</h5>
+                                <div class="form-group">
+                                    <label class="py-2 px-1" for="exampleInputEmail1">Email address *</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                </div>
+                                <div class="form-group">
+                                    <label class="py-2 px-1" for="exampleInputPassword1">Password *</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <p id="emailHelp" class="form-text text-muted my-3">Your personal data will be used
+                                    to
+                                    support your experience throughout this website, to manage access to your account,
+                                    and
+                                    for other purposes described in our <span><a href=""> privacy
+                                        policy.</a></span></p>
+                                <p>
+                                    <button type="submit" class="btn btn-primary">Resgister</button>
+
+                                </p>
+                            </form>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
