--- a/index.html
+++ b/index.html
@@ -185,9 +185,7 @@
                                 <h6>EXCLUSIVE OFFER <span> -40% OFF</span></h6>
                                 <h1 class="fw-bold py-2"> Quality Freshness Guarenteed!</h1>
                                 <p>Only this week. Don't miss...</p>
-                                <p style="display: inline-block">from
-                                <h5>$14.35</h5>
-                                </p>
+                                <p>from <span>$14.35</span> </p>
                                 <button class="btn btn-info">Shop Now --></button>
                             </div>
                         </li>
@@ -197,19 +195,18 @@
                                 <h6>EXCLUSIVE OFFER <span> -20% OFF</span></h6>
                                 <h1 class="fw-bold py-2"> A different kind of grocyery store</h1>
                                 <p>Only this week. Don't miss...</p>
-                                <span>from <h5>$7.99</h5></span>
+                                <p>from <span>$7.99</span></p>
                                 <button class="btn btn-info">Shop Now --></button>
                             </div>
                         </li>
+
                         <li class="slide animate">
                             <img src="/assets/img/slider-image-7.jpg" />
                             <div class="content">
                                 <h6>EXCLUSIVE OFFER <span> -40% OFF</span></h6>
                                 <h1 class="fw-bold py-2"> Quality Freshness Guarenteed!</h1>
                                 <p>Only this week. Don't miss...</p>
-                                <p style="display: inline-block">from
-                                <h5>$14.35</h5>
-                                </p>
+                                <p>from <span>$14.35</span> </p>
                                 <button class="btn btn-info">Shop Now --></button>
                             </div>
                         </li>
@@ -219,7 +216,7 @@
                                 <h6>EXCLUSIVE OFFER <span> -20% OFF</span></h6>
                                 <h1 class="fw-bold py-2"> A different kind of grocyery store</h1>
                                 <p>Only this week. Don't miss...</p>
-                                <span>from <h5>$7.99</h5></span>
+                                <p>from <span>$7.99</span></p>
                                 <button class="btn btn-info">Shop Now --></button>
                             </div>
                         </li>
@@ -322,7 +319,7 @@
         </section>
 
         <section class="container-fluid deadlineSection">
-            <div class="container my-5">
+            <div id="deadline" class="container  my-5">
                 <div class="row ">
                     <div class="categories  col-lg-12 d-flex">
                         <div class="col-lg-3 leftSide">
@@ -458,12 +455,14 @@
         <section class="carouselProductSection">
             <div class="cntnr" id="featurecntnr" style="margin:150px auto">
                 <div class="row mx-auto my-auto justify-content-center">
-                    <div id="featureCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div id="featureCarousel" class="carousel slide" data-bs-ride="carousel" style="position: relative">
                         <div class="float-end pe-md-4">
-                            <a class="indicator" href="#featureCarousel" role="button" data-bs-slide="prev">
+                            <a style="left: -5%;" class="indicator" href="#featureCarousel" role="button"
+                                data-bs-slide="prev">
                                 <span class="fas fa-chevron-left" aria-hidden="true"></span>
                             </a> &nbsp;&nbsp;
-                            <a class="w-aut indicator" href="#featureCarousel" role="button" data-bs-slide="next">
+                            <a style="right: -5%;" class="w-aut indicator" href="#featureCarousel" role="button"
+                                data-bs-slide="next">
                                 <span class="fas fa-chevron-right" aria-hidden="true"></span>
                             </a>
                         </div>
@@ -928,25 +927,11 @@
 </body>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
 <script src="/assets/script/countdown.js"></script>
 
-
-
-<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 </script>
 
