--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <ul class="HomeSubMenu">
                                     <li><a href="">Home1</a></li>
                                     <li><a href="">Home2</a></li>
-                                    <li><a href="">Home3</a></li>
+                                    <li><a href="/index.html">Home3</a></li>
                                     <li><a href="">Home4</a></li>
                                     <li><a href="">Home5</a></li>
                                 </ul>
@@ -165,8 +165,8 @@
                         <li><a href="">MEATS & SEAFOOD</a></li>
                         <li><a href=""> <i class='bx bx-color'></i>BAKERY</a></li>
                         <li><a href="">BEVERAGES</a></li>
-                        <li><a href="">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="/assets/html/blog.html">BLOG</a></li>
+                        <li><a href="/assets/html/contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
