--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -179,58 +179,109 @@
             <div class="row col-11 shopPage d-flex justify-content-around">
                 <div class="leftSide col-3">
                     <h6>PRODUCT CATEGORIES</h6>
-                    <ul class="mt-3">Beverages
-                        <li><input type="checkbox" name="" id="">Cofee</li>
-                        <li><input type="checkbox" name="" id="">Craft Beer</li>
-                        <li><input type="checkbox" name="" id="">Drink Boxes & Pouches</li>
-                        <li><input type="checkbox" name="" id="">Milk & Plant-Based Milk</li>
-                        <li><input type="checkbox" name="" id="">Soda & Pop</li>
-                        <li><input type="checkbox" name="" id="">Sparkling Water</li>
-                        <li><input type="checkbox" name="" id="">Tea & Kombucha</li>
-                        <li><input type="checkbox" name="" id="">Water</li>
-                    </ul>
-                    <ul>Biscuits & Snacks</ul>
-                    <ul>Breads & Bakery
-                        <li>Buns and Rolls</li>
-                        <li>Cakes and Cupcakes</li>
-                        <li>Cookies and Brownies</li>
-                        <li>Donuts and Muffins</li>
-                        <li>Order Specialty Cakes</li>
-                        <li>Packaged Breads</li>
-                    </ul>
-                    <ul>Breakfast & Dairy
-                        <li>Butter and Margarine</li>
-                        <li>Cheese</li>
-                        <li>Eggs Substitutes</li>
-                        <li>Honey</li>
-                        <li>Marmalades</li>
-                        <li>Milk & Flavoured Milk</li>
-                        <li>Sour Cream and Dips</li>
-                        <li>Yogurt</li>
+                    <div class="prodCategories">
+                        <ul class="mt-3"><input type="checkbox" name="" id="">Beverages <span class="plus">+</span><span
+                                class="minus d-none">-</span>
+                            <div class="li">
+                                <li><input type="checkbox" name="" id="">Cofee</li>
+                                <li><input type="checkbox" name="" id="">Craft Beer</li>
+                                <li><input type="checkbox" name="" id="">Drink Boxes & Pouches</li>
+                                <li><input type="checkbox" name="" id="">Milk & Plant-Based Milk</li>
+                                <li><input type="checkbox" name="" id="">Soda & Pop</li>
+                                <li><input type="checkbox" name="" id="">Sparkling Water</li>
+                                <li><input type="checkbox" name="" id="">Tea & Kombucha</li>
+                                <li><input type="checkbox" name="" id="">Water</li>
+                            </div>
+                        </ul>
+                        <ul><input type="checkbox" name="" id="">Biscuits & Snacks</ul>
+                        <ul><input type="checkbox" name="" id="">Breads & Bakery <span class="plus">+</span><span
+                                class="minus d-none">-</span>
+                            <div class="li">
+                                <li><input type="checkbox" name="" id="">Buns and Rolls</li>
+                                <li><input type="checkbox" name="" id="">Cakes and Cupcakes</li>
+                                <li><input type="checkbox" name="" id="">Cookies and Brownies</li>
+                                <li><input type="checkbox" name="" id="">Donuts and Muffins</li>
+                                <li><input type="checkbox" name="" id="">Order Specialty Cakes</li>
+                                <li><input type="checkbox" name="" id="">Packaged Breads</li>
+                            </div>
+                        </ul>
+                        <ul><input type="checkbox" name="" id="">Breakfast & Dairy <span class="plus">+</span><span
+                                class="minus d-none">-</span>
+                            <div class="li">
+                                <li><input type="checkbox" name="" id="">Butter and Margarine</li>
+                                <li><input type="checkbox" name="" id="">Cheese</li>
+                                <li><input type="checkbox" name="" id="">Eggs Substitutes</li>
+                                <li><input type="checkbox" name="" id="">Honey</li>
+                                <li><input type="checkbox" name="" id="">Marmalades</li>
+                                <li><input type="checkbox" name="" id="">Milk & Flavoured Milk</li>
+                                <li><input type="checkbox" name="" id="">Sour Cream and Dips</li>
+                                <li><input type="checkbox" name="" id="">Yogurt</li>
 
-                    </ul>
-                    <ul>Frozen Foods</ul>
-                    <ul>Fruits & Vegetables
-                        <li>Herbs & Seasonings</li>
-                        <li>Packaged Produce</li>
-                        <li>Party Trays</li>
-                        <li>Cuts & Sprouts</li>
-                        <li>Exotic Fruits & Veggies</li>
-                        <li>Fresh Fruits</li>
-                        <li>Fresh Vegetables</li>
-                    </ul>
-                    <ul>Grocery & Staples</ul>
-                    <ul>Household Needs</ul>
-                    <ul>Meats & Seafood
-                        <li>Shrimp</li>
-                        <li>Sliced Deli Meat</li>
-                        <li>Wild Caught Fillets</li>
-                        <li>Beef</li>
-                        <li>Breakfast Sausage</li>
-                        <li>Chicken</li>
-                        <li>Crab and Shellfish</li>
-                        <li>Dinner Sausage</li>
-                    </ul>
+                            </div>
+                        </ul>
+                        <ul><input type="checkbox" name="" id="">Frozen Foods</ul>
+                        <ul><input type="checkbox" name="" id="">Fruits & Vegetables <span class="plus">+</span><span
+                                class="minus d-none">-</span>
+                            <div class="li">
+                                <li><input type="checkbox" name="" id="">Herbs & Seasonings</li>
+                                <li><input type="checkbox" name="" id="">Packaged Produce</li>
+                                <li><input type="checkbox" name="" id="">Party Trays</li>
+                                <li><input type="checkbox" name="" id="">Cuts & Sprouts</li>
+                                <li><input type="checkbox" name="" id="">Exotic Fruits & Veggies</li>
+                                <li><input type="checkbox" name="" id="">Fresh Fruits</li>
+                                <li><input type="checkbox" name="" id="">Fresh Vegetables</li>
+                            </div>
+                        </ul>
+                        <ul><input type="checkbox" name="" id="">Grocery & Staples</ul>
+                        <ul><input type="checkbox" name="" id="">Household Needs</ul>
+                        <ul><input type="checkbox" name="" id="">Meats & Seafood <span class="plus">+</span><span
+                                class="minus d-none">-</span>
+                            <div class="li">
+                                <li><input type="checkbox" name="" id="">Shrimp</li>
+                                <li><input type="checkbox" name="" id="">Sliced Deli Meat</li>
+                                <li><input type="checkbox" name="" id="">Wild Caught Fillets</li>
+                                <li><input type="checkbox" name="" id="">Beef</li>
+                                <li><input type="checkbox" name="" id="">Breakfast Sausage</li>
+                                <li><input type="checkbox" name="" id="">Chicken</li>
+                                <li><input type="checkbox" name="" id="">Crab and Shellfish</li>
+                                <li><input type="checkbox" name="" id="">Dinner Sausage</li>
+                            </div>
+                        </ul>
+                    </div>
+                    <h6>FILTER BY PRICE</h6>
+                    <div class="prodFilter">
+                        <div class="progress-wrapper">
+                            <!-- <div class="progress">
+                            </div> -->
+                          </div>
+                        <datalist id="slider-list">
+                            <option>0</option>
+                            <option>10</option>
+                            <option>20</option>
+                            <option>30</option>
+                            <option>40</option>
+                            <option>50</option>
+                            <option>60</option>
+                            <option>70</option>
+                        </datalist>
+                        <input type="range" id="slider" list="slider-list" class="w-100" />
+                        <p>Price: <span> $0 - $70</span></p>
+                        <strong>FILTER</strong>
+                    </div>
+                    <h6>PRODUCT STATUS</h6>
+                    <div class="prodStatus">
+                        <p><input type="checkbox" name="" id="">In Stock</p>
+                        <p><input type="checkbox" name="" id="">On Sale</p>
+                    </div>
+                    <h6>BRANDS</h6>
+                    <div class="brands">
+                        <p><input type="checkbox" name="" id="">Frito Lay <span>(6)</span></p>
+                        <p><input type="checkbox" name="" id="">Nespresso<span>(10)</span></p>
+                        <p><input type="checkbox" name="" id="">Oreo<span>(6)</span></p>
+                        <p><input type="checkbox" name="" id="">Quaker<span>(8)</span></p>
+                        <p><input type="checkbox" name="" id="">Welch's<span>(7)</span></p>
+                    </div>
+                    <img src="/assets/img/Blog/sidebar-banner.gif" class="w-100 mt-5" alt="">
                 </div>
                 <div class="rightSide col-8">
                     <img class="w-100" src="/assets/img/shop/bacola-banner-18.jpg" alt="">
@@ -550,16 +601,9 @@
 
 
 </body>
-
-
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
-<script src="/assets/script/countdown.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-</script>
 
-<script src="/assets/script/script.js"></script>
+<script src="/assets/script/shop.js"></script>
 
 </html>
