feat: product page 70 % completed

--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -251,10 +251,91 @@
                             </div>
                             <div class="col-4 rightPart">
                                 <p>Covid-19 Info: We keep delivering.</p>
-
+                                <div class="content">
+                                    <span><i class="fas fa-truck"></i> Free Shipping apply to all orders over
+                                        $100</span>
+                                    <span><i class="fas fa-truck"></i> Guranteed 100% Organic from natural farmas</span>
+                                    <span><i class="fas fa-truck"></i> 1 Day Returns if you change your mind</span>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </section>
+                <section class="tabSection">
+                    <div class="container">
+                        <div class="row col-12 mt-5">
+                            <nav>
+                                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                    <button class="nav-link active" id="nav-description-tab" data-bs-toggle="tab"
+                                        data-bs-target="#nav-description" type="button" role="tab"
+                                        aria-controls="nav-description" aria-selected="true">Description</button>
+                                    <button class="nav-link" id="nav-info-tab" data-bs-toggle="tab"
+                                        data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info"
+                                        aria-selected="false">ADDITIONAL INFORMATION</button>
+                                    <button class="nav-link" id="nav-review-tab" data-bs-toggle="tab"
+                                        data-bs-target="#nav-review" type="button" role="tab" aria-controls="nav-review"
+                                        aria-selected="false">REVIEWS (1)</button>
+                                </div>
+                            </nav>
+                            <div class="tab-content" id="nav-tabContent">
+                                <div class="tab-pane fade show active" id="nav-description" role="tabpanel"
+                                    aria-labelledby="nav-description-tab" tabindex="0">
+                                    <div class="firstTabContent">
+                                        <p class="mt-4">Quisque varius diam vel metus mattis, id aliquam diam rhoncus.
+                                            Proin vitae
+                                            magna
+                                            in dui finibus malesuada et at nulla. Morbi elit ex, viverra vitae ante vel,
+                                            blandit feugiat ligula. Fusce fermentum iaculis nibh, at sodales leo maximus
+                                            a.
+                                            Nullam ultricies sodales nunc, in pellentesque lorem mattis quis. Cras
+                                            imperdiet
+                                            est in nunc tristique lacinia. Nullam aliquam mauris eu accumsan tincidunt.
+                                            Suspendisse velit ex, aliquet vel ornare vel, dignissim a tortor.</p>
 
+                                        <p>Morbi ut sapien vitae odio accumsan gravida. Morbi vitae erat auctor,
+                                            eleifend
+                                            nunc a, lobortis neque. Praesent aliquam dignissim viverra. Maecenas lacus
+                                            odio,
+                                            feugiat eu nunc sit amet, maximus sagittis dolor. Vivamus nisi sapien,
+                                            elementum
+                                            sit amet eros sit amet, ultricies cursus ipsum. Sed consequat luctus ligula.
+                                            Curabitur laoreet rhoncus blandit. Aenean vel diam ut arcu pharetra
+                                            dignissim ut
+                                            sed leo. Vivamus faucibus, ipsum in vestibulum vulputate, lorem orci
+                                            convallis
+                                            quam, sit amet consequat nulla felis pharetra lacus. Duis semper erat
+                                            mauris,
+                                            sed egestas purus commodo vel.</p>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade" id="nav-info" role="tabpanel" aria-labelledby="nav-info-tab"
+                                    tabindex="0">
+                                    <div class="secondTabContent d-flex">
+                                        <p>Brands</p>
+                                        <p>Welch's</p>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade" id="nav-review" role="tabpanel"
+                                    aria-labelledby="nav-contact-tab" tabindex="0">
+                                    <div class="thirdTabContent">
+                                        <h6>1 REVIEW FOR ALL NATURAL ITALIAN-STYLE CHICKEN MEATBALLS</h6>
+                                        <div class="adminContent mt-4 d-flex">
+                                            <div class="adminImg">
+                                                <img src="/assets/img/Product/admin.jpeg" alt="">
+                                            </div>
+                                            <div class="adminComment">
+                                                <i class='bx bxs-star'></i><i class='bx bxs-star'></i><i
+                                                    class='bx bxs-star'></i><i class='bx bxs-star'></i><i
+                                                    class='bx bx-star'></i>
+                                                <p><strong>admin </strong>– <span>May 1, 2021</span></p>
+                                                <p>Sed perspiciatis unde omnis iste natus error sit voluptatem
+                                                    accusantium doloremque laudantium.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
