feat: product page Completed

--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -261,6 +261,7 @@
                         </div>
                     </div>
                 </section>
+
                 <section class="tabSection">
                     <div class="container">
                         <div class="row col-12 mt-5">
@@ -332,6 +333,41 @@
                                                     accusantium doloremque laudantium.</p>
                                             </div>
                                         </div>
+                                        <h6 class="secondHead">Add a review</h6>
+                                        <div class="emailContent">
+                                            <p>Your email address will not be published. Required fields are marked *
+                                            </p>
+                                            <p>Your rating *</p>
+                                            <p class="rating">
+                                                <span><i class='bx bx-star'></i></span><span class="line">|</span>
+                                                <span><i class='bx bx-star'></i><i class='bx bx-star'></i></span><span
+                                                    class="line">|</span>
+                                                <span><i class='bx bx-star'></i><i class='bx bx-star'></i></i><i
+                                                        class='bx bx-star'></i></span><span class="line">|</span>
+                                                <span><i class='bx bx-star'></i><i class='bx bx-star'></i></i><i
+                                                        class='bx bx-star'></i><i class='bx bx-star'></i></span><span
+                                                    class="line">|</span>
+                                                <span><i class='bx bx-star'></i><i class='bx bx-star'></i></i><i
+                                                        class='bx bx-star'></i><i class='bx bx-star'></i><i
+                                                        class='bx bx-star'></i></span>
+                                            </p>
+                                            <form action="">
+                                                <label>Your review *</label>
+                                                <textarea name="" id="" cols="" rows=""></textarea>
+                                                <label for="">Name *</label>
+                                                <input class="inp" type="text">
+                                                <label for="">Email *</label>
+                                                <input class="inp" type="email">
+                                                <div class="mb-3 form-check">
+                                                    <input type="checkbox" class="form-check-input check"
+                                                        id="exampleCheck1">
+                                                    <label class="form-check-label" for="exampleCheck1"> Save my name,
+                                                        email, and website in this browser for the next time I
+                                                        comment.</label>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary">Submit</button>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -339,6 +375,115 @@
                     </div>
                 </section>
 
+                <section class="lastSection">
+                    <div class="container">
+                        <h5>RELATED PRODUCTS</h5>
+                        <div class="products">
+                            <div class="d-flex" style="flex-wrap: wrap;">
+                                <div class="product  col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-62-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">Add To Card</button>
+                                    </div>
+                                </div>
+                                <div class="product col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-60-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">Add To Card</button>
+                                    </div>
+                                </div>
+                                <div class="product col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-46-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">Add To Card</button>
+                                    </div>
+                                </div>
+                                <div class="product col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-45-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">View Products</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h5>RECENTLY VIEWED PRODUCTS</h5>
+                        <div class="products">
+                            <div class="d-flex" style="flex-wrap: wrap;">
+                                <div class="product  col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-62-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">Add To Card</button>
+                                    </div>
+                                </div>
+                                <div class="product col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-60-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">Add To Card</button>
+                                    </div>
+                                </div>
+                                <div class="product col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-46-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">Add To Card</button>
+                                    </div>
+                                </div>
+                                <div class="product col-3">
+                                    <div class="content">
+                                        <i class="fas minimize fa-compress"></i>
+                                        <i class='bx heart bx-heart'></i>
+                                        <img src="/assets/img/product-image-45-346x310.jpg" alt="">
+                                        <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                        <strong>IN STOCK</strong>
+                                        <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                        <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                                        <button class="btn btn-primary">View Products</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </section>
             </div>
 
         </div>
